# wave_sim

./: Cargo.toml  LICENSE  README.md  index.html  run.sh
assets/: simple_grid.ldtk
assets/shaders/: 2d_mesh.wgsl
src/: animation_plugin.rs  finite_difference.rs  main.rs  objects_3d.rs  pan_orbit_camera.rs  particle_mess.rs  simulation_plugin.rs  ui.rs
src/colored_mesh/: mod.rs  pipeline.rs  plugin.rs
src/longitudinal_wave_3d_simulation/: animation_plugin.rs  mod.rs  simulation_plugin.rs  ui.rs
src/particle_3d_simulation/: animation_plugin.rs  mod.rs  simulation_plugin.rs
src/wave_2d_simulation/: animation_plugin.rs  finite_difference.rs  mod.rs  simulation_plugin.rs  ui.rs
src/wave_in_panel/: mod.rs
