[package]
name = "wave_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
bevy = "0.9"
ndarray = "0.15"

# mathru = "0.14"
# bevy_ecs_ldtk = "0.4.0"
# bevy_rapier2d = "0.18.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
